# app/Models/Exchange.php
@@ -6,8 +6,18 @@ use Illuminate\Database\Eloquent\Model;
 
 class Exchange extends Model
 {
-    //
     protected $table = 'jyfb_exchange';
+
+    /**
+     * The attributes that are mass assignable.
+     *
+     * @var array
+     */
+    protected $fillable = [
+        'user_id', 'goods_id', 'ingots', 'quantity', 'created_at'
+    ];
+
+    public $timestamps = false;
 
     // 状态
     const INVALID = 0;
@@ -15,17 +25,16 @@ class Exchange extends Model
 
     public function goods()
     {
-        return $this->belongsTo(Goods::class,'goods_id');
+        return $this->belongsTo(Goods::class, 'goods_id');
     }
 
     /**
      * @param int $status
      * @return string
      */
-    public static function getStatusName(int $status):string
+    public static function getStatusName(int $status): string
     {
-        switch ($status)
-        {
+        switch ($status) {
             case self::INVALID:
                 return '禁用';
             case self::NORMAL:
