# app/Models/Ingots.php
@@ -18,12 +18,39 @@ class Ingots extends Model
     //
     protected $table = 'jyfb_ingots';
 
+    /**
+     * The attributes that are mass assignable.
+     *
+     * @var array
+     */
+    protected $fillable = [
+        'user_id', 'quantity', 'expire_time'
+    ];
+
     //TODO;
     // 状态
-    public static $_statuses = ['禁用', '正常'];
+    const INVALID = 0;
+    const NORMAL  = 1;
 
     public function user()
     {
         return $this->belongsTo(User::class,'user_id');
+    }
+
+    /**
+     * @param int $status
+     * @return string
+     */
+    public static function getStatusName(int $status):string
+    {
+        switch ($status)
+        {
+            case self::INVALID:
+                return '禁用';
+            case self::NORMAL:
+                return '正常';
+            default:
+                return '正常';
+        }
     }
 }
